--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 </div>
 </div>
 
-<p><a href="C:\Users\Janvi Mittal\OneDrive\Desktop\Personal Documents\ChefWeb\chef_signup.html"><button class="w3-button w3-red w3-block">Want to Work with Us?</button></a></p>
+<p><a href="C:\Users\Janvi Mittal\OneDrive\Desktop\Personal Documents\ChefWeb\chef_signup.html"><button class="w3-button w3-red w3-block">Want to Work with ?</button></a></p>
 
 </body>
 </html>
