--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="C:\Users\Janvi Mittal\OneDrive\Desktop\Personal Documents\ChefWeb\Images\banner.jpeg" alt="banner" width="1600" height="800">
+  <img class="w3-image" src="Chef-a-la-Carte/Images/banner.jpeg" alt="banner" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge"></h1>
   </div>
@@ -122,7 +122,7 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 </div>
 </div>
 
-<p><a href="C:\Users\Janvi Mittal\OneDrive\Desktop\Personal Documents\ChefWeb\chef_signup.html"><button class="w3-button w3-red w3-block">Want to Work with ?</button></a></p>
+<p><a href="C:\Users\Janvi Mittal\OneDrive\Desktop\Personal Documents\ChefWeb\chef_signup.html"><button class="w3-button w3-red w3-block">Want to Work with Us?</button></a></p>
 
 </body>
 </html>
